Implement authentication and all endpoints functionalities - Only orders and further testing + spec revision as written in gdocs left
