# bookaholic server/service/UserService.js
@@ -1,6 +1,8 @@
 'use strict';
 
 const database = require("./DataLayer.js");
+const getJWT = require("../authenticators/JWTAuth.js").getJWT();
+const getHash = require("../authenticators/JWTAuth.js").getHash();
 /**
  * Get the user's orders
  *
@@ -8,15 +10,35 @@ const database = require("./DataLayer.js");
  * offset Integer Items to skip before starting to collect the response set. (optional)
  * returns List
  **/
-exports.getOrders = function(limit,offset) {
+exports.getOrders = function(username,limit,offset) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    var query = database
+                .select("order_id", "emission_time", "status", "total", "address")
+                .from("order")
+                .where("username", username);
+
+    if (limit)
+      query = query.limit(limit);
+
+    if (offset)
+      query = query.offset(offset);
+
+    query
+    .map(order => database
+      .select("details.book_id", "title as book_title", "cover_type", "item_price as price", "quantity")
+      .from("details")
+      .join("book", "details.book_id", "book.book_id")
+      .where("order_id", order.order_id)
+      .then(order_details => order.details = order_details))
+    .then(detailedOrders => resolve(detailedOrders))
+    .catch(error => reject(error))
   });
+
+  /*to group them all:
+  query
+  .reduce((orders, order, []) =>  order.in(orders) ? orders = orders : orders.addObject(this
+    .filter(item => item.book_id == order.book_id && item.cover_type == order.cover_type)
+    .reduce((detailedOrder, singleOrder, {initialized with details: []}) => detailedOrder.details.add({book_id: singleOrder.book_id, etc...})*/
 }
 
 
@@ -25,14 +47,14 @@ exports.getOrders = function(limit,offset) {
  *
  * returns User
  **/
-exports.getProfile = function() {
+exports.getProfile = function(username) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    database
+    .select("username", "email")
+    .from("user")
+    .where("username", username)
+    .then(response => resolve(response[0]))
+    .catch(error => reject(error));
   });
 }
 
@@ -44,14 +66,16 @@ exports.getProfile = function() {
  * password String
  * returns User
  **/
-exports.login = function(username,password) {
+exports.login = function(username,password) {     //to be passed to the authenticator
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    database
+    .select("username", "password_hash")
+    .from("user")
+    .where("username", username)
+    .map(credentials => {credentials.password = password; return credentials;})
+    .then(enrichedCredentials => getJWT(enrichedCredentials[0]))
+    .then(jwt => resolve({username: username, access_token: jwt}))
+    .catch(error => reject(error));
   });
 }
 
@@ -61,9 +85,9 @@ exports.login = function(username,password) {
  *
  * no response value expected for this operation
  **/
-exports.logout = function() {
+exports.logout = function(username) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    resolve("Delete the access-token in your local storage to ensure proper logout!");
   });
 }
 
@@ -85,17 +109,18 @@ exports.postToOrders = function() {
  *
  * username String
  * password String
- * eMail String
+ * email String
  * returns User
  **/
-exports.register = function(username,password,eMail) {
+exports.register = function(username,password,email) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    getHash(password)
+    .then(password_hash => database
+      .insert({"username": username, "password_hash": password_hash, "email": email})
+      .into("user")
+      .then(response => resolve(response))
+      .catch(error => reject(error)))
+    .catch(error => reject(error));
   });
 }
 
